Brought the project up to date with the latest HEAD of svn 2011-08-24

--- a/BimWebServer/www/css/bim.css
+++ b/BimWebServer/www/css/bim.css
@@ -500,10 +500,10 @@ p.explain {
 	height: 14px;
 }
 
-.enabledPlugin, .enabledSerializer {
+.enabledPlugin, .enabledSerializer, .enabledDeserializer {
 	background-color: #AAFFAA;
 }
 
-.disabledPlugin, .disabledSerializer {
+.disabledPlugin, .disabledSerializer, .disabledDeserializer {
 	background-color: #FFAAAA;
 }
